# McCAD-Library

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE.txt  Mapping  McCADConfig.h.in  README.md  README.rst  dox_config  findMOAB.cmake  main.cpp
Implementation/conversion/: BVHCreator.cpp  BVHCreator.hpp  CMakeLists.txt  conversion_impl.cpp  conversion_impl.hpp  voidGenerator.cpp  voidGenerator.hpp
Implementation/decomposition/: AssistSurfaceGenerator.cpp  AssistSurfaceGenerator.hpp  CMakeLists.txt  SolidRebuilder.cpp  SolidRebuilder.hpp  SolidRepairer.cpp  SolidRepairer.tpp  SolidSplitter.cpp  SolidSplitter.hpp  boundSurfacePlane_impl.cpp  boundSurfacePlane_impl.hpp  boundSurface_impl.cpp  boundSurface_impl.hpp  commonedgefinder.cpp  constructSolidObj.hpp  constructSolidObj.tpp  createSolidObj.hpp  createSolidObj.tpp  decomposeSolid_impl.cpp  decomposeSolid_impl.hpp  decomposition_impl.cpp  decomposition_impl.hpp  edgeOnSurface.cpp  edgeOnSurface.hpp  edgeOnSurface.tpp  edge_impl.cpp  edge_impl.hpp  edgescombiner.cpp  edgescombiner.hpp  faceCollision.cpp  faceCollision.hpp  generateFacesList.cpp  generateFacesList.hpp  generateFacesList.tpp  meshtriangle_impl.cpp  pointOnSurface.cpp  pointOnSurface.hpp  pointOnSurface.tpp  preprocessor.cpp  preprocessor.hpp  (+16 more)
Implementation/geometry/: BoundingBox.cpp  BoundingBox.hpp  CMakeLists.txt  boundSurfaceCyl_impl.cpp  boundSurfaceCyl_impl.hpp  boundSurfacePlane_impl.cpp  boundSurfacePlane_impl.hpp  boundSurfaceTor_impl.cpp  boundSurfaceTor_impl.hpp  boundSurface_impl.cpp  boundSurface_impl.hpp  boundingBox_impl.cpp  cylSolid_impl.cpp  cylSolid_impl.hpp  edge_impl.cpp  edge_impl.hpp  meshtriangle_impl.cpp  meshtriangle_impl.hpp  planarSolid_impl.cpp  planarSolid_impl.hpp  solid_impl.cpp  solid_impl.hpp  surface_impl.cpp  surface_impl.hpp  torSolid_impl.cpp  torSolid_impl.hpp
Implementation/geometry/Coordinates/: CMakeLists.txt
Implementation/tools/: CMakeLists.txt  CurveUtilities.hpp  EdgesComparator.cpp  FaceParameters.cpp  FaceParameters.hpp  Iterator.hpp  PlaneComparator.cpp  PlaneComparator.hpp  PlaneFuser.cpp  PlaneFuser.hpp  ShapeView.hpp  ShapeView.tpp  distanceEvaluateor.cpp  distanceEvaluateor.hpp  heirarchyFlatter.cpp  planeComparator.cpp  planeComparator.hpp  senseEvaluateor.cpp  senseEvaluateor.hpp  solidType.hpp  surfaceComparator.cpp  surfaceComparator.hpp  tools_impl.cpp  tools_impl.hpp
Implementation/tools/FloatingPoint/: CMakeLists.txt  DecimalDecomposition.tpp
Interface/decomposition/: CMakeLists.txt  boundSurfacePlane.cpp  decomposition.cpp  decomposition.hpp  edge.cpp  edge.hpp  meshtriangle.hpp  solid.cpp  solid.hpp
Interface/geometry/: CMakeLists.txt  CMakeLists.txt~  boundSurface.hpp  boundSurfaceCyl.hpp  boundSurfacePlane.cpp  boundSurfacePlane.hpp  cylSolid.cpp  edge.cpp  meshtriangle.cpp  solid.cpp  solid.hpp  surface.cpp  surface.hpp  torSolid.cpp  torSolid.hpp
Interface/io/: CMakeLists.txt  Inputconfig.cpp  Inputconfig.hpp  inputconfig.cpp  inputconfig.h  inputconfig.hpp  manager.cpp  manager.hpp  stepreader.cpp  stepwriter.hpp
Interface/tools/: CMakeLists.txt  ParallelTaskQueue.hpp  TaskQueue.hpp  tools.cpp
dependencies/MOAB/: CMakeLists.txt
includes/decomposition/: CMakeLists.txt  boundSurface.hpp  boundSurfacePlane.hpp  boundSurfacePlane_impl.hpp  boundSurface_impl.hpp  decomposeSolid.hpp  decomposeSolid_impl.hpp  decomposition.hpp  decomposition_impl.hpp  edge.hpp  edge_impl.hpp  meshtriangle_impl.hpp  solid.hpp  solid_impl.hpp  splitsolid_impl.hpp  splitsurfaces_impl.hpp  surface.hpp  surface_impl.hpp
source/decomposition/: CMakeLists.txt  decomposeSolid.cpp  decomposeSolid.hpp  decomposeSolid_impl.cpp  decomposeSolid_impl.hpp  decomposition.cpp  decomposition.hpp  decomposition_impl.cpp  decomposition_impl.hpp
source/general/: CMakeLists.txt  general.cpp  general.hpp  generaldetail.cpp  generaldetail.hpp  inputdata.cpp  inputdata.hpp  inputdata_impl.cpp  inputdata_impl.hpp
source/io/: CMakeLists.txt  stepreader.cpp  stepreader_impl.cpp  stepreader_impl.hpp
sources/decomposition/: .#decomposeSolid_impl.cpp  CMakeLists.txt  boundSurface.cpp  boundSurfacePlane.cpp  boundSurfacePlane.hpp  boundSurfacePlane_impl.cpp  boundSurface_impl.cpp  boundSurface_impl.hpp  decomposeSolid.cpp  decomposeSolid_impl.cpp  decomposeSolid_impl.hpp  decomposition.cpp  decomposition_impl.cpp  decomposition_impl.hpp  edge.cpp  edge_impl.cpp  solid.cpp  solid_impl.cpp  splitSolid_impl.cpp  splitsolid.hpp  splitsolid_impl.cpp  splitsolid_impl.hpp  splitsurfaces.hpp  splitsurfaces_impl.cpp  surface.cpp  surface_impl.cpp
sources/general/: CMakeLists.txt  inputdata_impl.cpp
sources/io/: CMakeLists.txt  stepreader.hpp  stepreader_impl.cpp  stepwriter_impl.cpp
sources/tools/: CMakeLists.txt  CurveUtilities.cpp  FaceParameters.cpp  Iterator.tpp  PlaneComparator.hpp  PlaneFuser.cpp  ShapeView.tpp  TypeName.cpp  tools_impl.cpp  tools_impl.hpp
sources/tools/FloatingPoint/: CMakeLists.txt
src/: .gitignore  CMakeLists.txt  main.cpp
src/Implementation/: CMakeLists.txt
src/Implementation/conversion/: BVHCreator.hpp  voidGenerator.cpp  voidGenerator.hpp
src/Implementation/decomposition/: decomposeSolid_impl.cpp  decomposeSolid_impl.hpp  generateFacesList.hpp  splitsurfaces_impl.hpp  surfaceObjCerator.cpp  surfacesMerger.cpp  surfacesMerger.hpp  triangleCollision.cpp  triangleCollision.hpp
src/Implementation/geometry/: CMakeLists.txt  boundSurfacePlane_impl.cpp  boundSurface_impl.hpp  boundingBox_impl.cpp  cylSolid_impl.cpp  edge_impl.cpp  meshtriangle_impl.hpp  planarSolid_impl.hpp  surface_impl.hpp  torSolid_impl.cpp
src/Implementation/io/: CMakeLists.txt  stepreader_impl.cpp  stepreader_impl.hpp
src/Implementation/tools/: CMakeLists.txt  CurveUtilities.cpp  FaceParameters.hpp  senseEvaluator.cpp  senseEvaluator.hpp  surfacesFuser.hpp
src/Interface/: CMakeLists.txt
src/Interface/conversion/: CMakeLists.txt
src/McCAD/: CMakeLists.txt  McCAD.cpp
src/info/: info.hpp.in
src/tools/: CMakeLists.txt
tools/: CMakeLists.txt  tools.cpp  tools.hpp  tools_impl.cpp  tools_impl.hpp
(+3623 files in other folders)
