install (FILES edge.hpp DESTINATION ${PROJECT_BINARY_DIR}/includes)
install (FILES edge_impl.hpp DESTINATION ${PROJECT_BINARY_DIR}/includes)

install (FILES meshtriangle.hpp DESTINATION ${PROJECT_BINARY_DIR}/includes)
install (FILES meshtriangle_impl.hpp DESTINATION ${PROJECT_BINARY_DIR}/includes)

install (FILES surface.hpp DESTINATION ${PROJECT_BINARY_DIR}/includes)
install (FILES surface_impl.hpp DESTINATION ${PROJECT_BINARY_DIR}/includes)

install (FILES boundSurface.hpp DESTINATION ${PROJECT_BINARY_DIR}/includes)
install (FILES boundSurface_impl.hpp DESTINATION ${PROJECT_BINARY_DIR}/includes)

install (FILES boundSurfacePlane.hpp DESTINATION ${PROJECT_BINARY_DIR}/includes)
install (FILES boundSurfacePlane_impl.hpp DESTINATION ${PROJECT_BINARY_DIR}/includes)

install (FILES decomposeSolid.hpp DESTINATION ${PROJECT_BINARY_DIR}/includes)
install (FILES decomposeSolid_impl.hpp DESTINATION ${PROJECT_BINARY_DIR}/includes)

install (FILES decomposition.hpp DESTINATION ${PROJECT_BINARY_DIR}/includes)
install (FILES decomposition_impl.hpp DESTINATION ${PROJECT_BINARY_DIR}/includes)



