install (FILES edge.hpp edge_impl.hpp DESTINATION ${PROJECT_BINARY_DIR}/includes)
install (FILES meshtriangle.hpp meshtriangle_impl.hpp DESTINATION ${PROJECT_BINARY_DIR}/includes)
install (FILES surface.hpp surface_impl.hpp DESTINATION ${PROJECT_BINARY_DIR}/includes)
install (FILES boundSurface.hpp boundSurface_impl.hpp DESTINATION ${PROJECT_BINARY_DIR}/includes)
install (FILES boundSurfacePlane.hpp boundSurfacePlane_impl.hpp DESTINATION ${PROJECT_BINARY_DIR}/includes)
install (FILES splitsurfaces.hpp splitsurfaces_impl.hpp DESTINATION ${PROJECT_BINARY_DIR}/includes)
install (FILES splitsolid.hpp splitsolid_impl.hpp DESTINATION ${PROJECT_BINARY_DIR}/includes)
install (FILES solid.hpp solid_impl.hpp DESTINATION ${PROJECT_BINARY_DIR}/includes)
install (FILES decomposeSolid.hpp decomposeSolid_impl.hpp DESTINATION ${PROJECT_BINARY_DIR}/includes)
install (FILES decomposition.hpp decomposition_impl.hpp DESTINATION ${PROJECT_BINARY_DIR}/includes)



