add_library(DECOMPOSITION
  edge.cpp
  edge_impl.cpp
  meshtriangle.cpp
  meshtriangle_impl.cpp
  surface.cpp
  surface_impl.cpp
  boundSurface.cpp
  boundSurface_impl.cpp
  boundSurfacePlane.cpp
  boundSurfacePlane_impl.cpp
  splitsurfaces.cpp
  splitsurfaces_impl.cpp
  splitsolid.cpp
  splitsolid_impl.cpp
  solid.cpp
  solid_impl.cpp
  decomposeSolid.cpp
  decomposeSolid_impl.cpp
  decomposition.cpp
  decomposition_impl.cpp)
